# divelog_convert

./: .gitignore  README.md  app.spec  divelog_convert.spec  setup.cfg  tox.ini
data/: 7168_13960_20220224130600_1.zxu  7168_13960_20220505125800_1.zxu
data/to_keep/: from_divelog.uddf
docs/sphinx_conf/: conf.py  index.rst
docs/sphinx_conf/source/: divelog_convert.rst  modules.rst
setup.app/Contents/: Info.plist
setup.app/Contents/Frameworks/: libcrypto.1.1.dylib  libssl.1.1.dylib
setup.app/Contents/Frameworks/Python.framework/Versions/3.9/: Python
setup.app/Contents/Frameworks/Python.framework/Versions/3.9/lib/python3.9/config-3.9-darwin/: Makefile
setup.app/Contents/MacOS/: python
setup.app/Contents/Resources/: __boot__.py  divelog_convert_app  setup.py
setup.app/Contents/Resources/openssl.ca/: cert.pem
src/divelog_convert/: app.py  cli.py  converter.py  formater.py
src/divelog_convert/formaters/: csv.py  dl7.py  list.py  xml.py  zip.py
test/: divelog_archive_test.uddf  test_cli.py
test/data/: 6990_123456_20150817104200_1.zxu  6990_123456_20150817135900_2.zxu  diviac-export.csv  diviac-export3.csv  lagraule-subsurface.uddf  macdive.zxu
