[aliases]
test=tox
doc=build_sphinx

[metadata]
name = divelog_convert
author = Vivien Chene
author_email = viv@vivc.org
description = Dive logs formats conversion
version = attr: divelog_convert.__init__.__version__
url = https://github.com/vche/divelog_convert
keywords =
  scuba diving
  python tool
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Development Status :: 4 - Beta
  # Intended Audience :: Science/Research
  # Topic :: Scientific/Engineering
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
install_requires =
  m2r
  attrs

# Add additional non python data files
# [options.package_data]
#   * = *.txt, *.rst  # All projects
#   hello = *.msg     # hello project

[options.entry_points]
console_scripts =
  divelog_convert = divelog_convert.cli:main
# gui_scripts =
#   baz = my_package_gui:start_func

[tool:pytest]
testpaths=test

[build_sphinx]
source-dir = docs/sphinx_conf
build-dir = docs/doc
